<resources>
    <string name="app_name">Get It</string>
    <string name="action_settings">Settings</string>

    <string name="dont_have_it">YOU DON\'T HAVE IT</string>
    <string name="got_it">YOU\'VE GOT IT</string>
    <string name="give_it_to_you">SOMEONE NEEDS TO GIVE IT TO YOU</string>
    <string name="reset">IT\'S BEEN RESET</string>
    <string name="nobody_got_it">NOBODY GOT IT</string>
    <string name="get_it">GET IT</string>
    <string name="give_it">GIVE IT</string>
    <string name="giving_it">GIVING IT</string>
    <string name="api_endpoint">http://52.5.22.160:81</string>
    <string name="prefs_token_key">GET_IT_TOKEN</string>
    <string name="prefs_month_key">GOT_IT_MONTH</string>
    <string name="prefs_year_key">GOT_IT_YEAR</string>
    <string name="prefs_got_it_key">GOT_IT</string>
    <string name="drawer_open">Open Navigation</string>
    <string name="drawer_close">Close Navigation</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="title_activity_give_it">Give It</string>
    <string name="gcm_defaultSenderId">30114952254</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Map</item>
        <item>Statistics</item>
    </string-array>

    <string name="hello_world">Hello world!</string>
</resources>
