<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"  tools:context=".GetIt">
    <!-- The main content view -->


    <ListView android:id="@+id/left_drawer"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:background="@android:color/transparent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:minHeight="600dp">

        <TextView android:text="@string/got_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:textSize="70sp"
            android:gravity="center"
            android:textColor="#009688"
            android:id="@+id/statusText"/>

        <TextView android:text="@string/nobody_got_it" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:textSize="60sp"
            android:gravity="center"
            android:textColor="#009688"
            android:visibility="invisible"
            android:id="@+id/messageText"/>

        <Button
            android:id="@+id/give_it"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="400dp"
            android:layout_centerHorizontal="true"
            android:text="@string/give_it"
            android:textSize="40sp"
            android:textColor="#303F9F"
            android:background="@drawable/give_it_selector"
            android:padding="10dp"/>

    </RelativeLayout>
    </android.support.v4.widget.DrawerLayout>